@@ -2,6 +2,11 @@ Pending changes in the mainline
 ===============================
 
 
+Maintenance
+-----------
+
+* Fix decoding of DICOM images for plugins
+
 
 Version 1.7.0 (2020-05-22)
 ==========================
